--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matérias do técnico</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="styles.css">
+    <script src="scripts.js" defer></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body class="theme-light">
@@ -31,12 +31,12 @@
 
 <!-- Quadro de seleção de temas (inicialmente oculto) -->
 <div id="quadro-temas">
-    <button onclick="changeTheme('light')">Modo Claro</button>
-    <button onclick="changeTheme('dark')">Modo Escuro</button>
-    <button onclick="changeTheme('pixel')">Pixel Art</button>
-    <button onclick="changeTheme('math')">Matemática</button>
-    <button onclick="changeTheme('custom')">Personalizado</button>
-     <button onclick="toggleMathTheme()">Evento especial</button>
+  <button onclick="changeTheme('light')">☀️</button> <!-- Sol para o tema Claro -->
+    <button onclick="changeTheme('dark')">🌙</button> <!-- Lua para o tema Escuro -->
+    <button onclick="changeTheme('pixel')">🟪</button> <!-- Pixel (usei um quadrado, pode ajustar) -->
+    <button onclick="changeTheme('math')">π</button> <!-- Símbolo Pi para Matemática -->
+    <button onclick="changeTheme('custom')">❓</button> <!-- Interrogação para Personalizado -->
+     <button onclick="toggleMathTheme()">Evento</button>
 </div>
 
     <div class="container">
