--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
  <button id="temas-btn" onclick="toggleTemas()">🎨 Temas</button>
  <button id="chat-btn" onclick="toggleChat()">💬 Chat</button>
-
+<button id="voltar-btn" onclick="voltarParaInicio()">↩️</button>
 
 <!-- Caixa de chat (inicialmente oculta) -->
 <div id="chatbox">
