--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <h1 id="titulo-principal">Matérias do técnico</h1>
         <p id="instrucoes">Selecione uma opção para prosseguir</p>
 <div id="download-container" class="download-box" style="display: none;">
-    <a href="href=Projeto Java.jar" target="_blank" id="download-btn">📥 Baixar Material de POO Java</a>
+    <a href="href=Projeto java.jar" target="_blank" id="download-btn">📥 Baixar Material de POO Java</a>
 </div>
 <button id="exibir-conteudo-btn" class="botoesbutton" onclick="exibirConteudo()" style="display: none;">📖 Ver Conteúdo</button>
 
