--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="scripts.js" defer></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <body class="theme-light">
     <audio id="background-music" src="musica.mp3" autoplay loop></audio>
