--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!-- lá no topo do body, ao lado do background-music ou substituindo-o -->
+<audio id="theme-music" loop></audio>
 
 <body class="theme-light">
-    <audio id="background-music" src="musica.mp3" autoplay loop></audio>
+ 
 
  <button id="temas-btn" onclick="toggleTemas()">🎨 Temas</button>
  <button id="chat-btn" onclick="toggleChat()">💬 Chat</button>
